<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/select_time_range_item"
        android:title="@string/select_time_range">
        <menu>
            <item
                android:id="@+id/range_week_item"
                android:title="@string/week" />
            <item
                android:id="@+id/range_month_item"
                android:title="@string/month" />
            <item
                android:id="@+id/range_year_item"
                android:title="@string/year" />
            <item
                android:id="@+id/range_custom_item"
                android:title="@string/custom_range" />
        </menu>
    </item>
    <item
        android:id="@+id/switch_view_mode_item"
        android:title="@string/view_by_cate" />
    <item
        android:id="@+id/edit_wallet_item"
        android:title="@string/edit_wallet" />
</menu>