<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_bk_cashbook"
        android:title="@string/transactions_frag_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/reportFragment"
        android:icon="@drawable/round_pie_chart_black_24"
        android:title="@string/report_frag_title"
        app:showAsAction="always" />
    <item
        android:title=" "
        app:showAsAction="always" />
    <item
        android:id="@+id/planningFragment"
        android:icon="@drawable/ic_w_budget"
        android:title="@string/planning_frag_title"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/baseline_account_box_black_18dp"
        android:title=" "
        app:showAsAction="always" />
</menu>