<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet_detail_activity.WalletDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/wallet_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_wallet" />

    <ImageView
        android:id="@+id/wallet_icon_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet_detail_toolbar" />

    <EditText
        android:id="@+id/wallet_name_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/wallet_icon_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wallet_icon_img"
        app:layout_constraintTop_toTopOf="@+id/wallet_icon_img" />

    <EditText
        android:id="@+id/wallet_currency_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/currency_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wallet_name_edt"
        app:layout_constraintTop_toBottomOf="@+id/wallet_name_edt" />

    <Button
        android:id="@+id/deleteWalletBtn"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_bk_delete"
        android:text="@string/delete_wallet"
        android:textColor="@color/expense_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wallet_currency_edt" />

</androidx.constraintlayout.widget.ConstraintLayout>