<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/budget_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/budget_detail" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:context=".report_record_fragment.ReportRecordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".report_record_fragment.ReportRecordFragment">

            <ImageView
                android:id="@+id/category_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/image_placeholder"
                app:layout_constraintBottom_toBottomOf="@+id/category_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/category_txt" />

            <TextView
                android:id="@+id/category_txt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center|start"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/category_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amount_txt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/category_txt"
                app:layout_constraintTop_toBottomOf="@+id/category_txt" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="@+id/amount_txt"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/amount_txt"
                app:layout_constraintTop_toBottomOf="@+id/amount_txt" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spent"
                app:layout_constraintBottom_toTopOf="@+id/amount_spent_txt"
                app:layout_constraintStart_toStartOf="@+id/progressBar2" />

            <TextView
                android:id="@+id/amount_spent_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/progressBar2"
                app:layout_constraintStart_toStartOf="@+id/textView9" />

            <TextView
                android:id="@+id/amount_left_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="TextView"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/progressBar2"
                app:layout_constraintEnd_toEndOf="@+id/progressBar2" />

            <TextView
                android:id="@+id/left_overspent_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                app:layout_constraintBottom_toTopOf="@+id/amount_left_txt"
                app:layout_constraintEnd_toEndOf="@+id/amount_left_txt" />

            <ImageView
                android:id="@+id/date_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintEnd_toEndOf="@+id/category_img"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/category_img"
                app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

            <TextView
                android:id="@+id/range_title_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/day_left_txt"
                app:layout_constraintStart_toStartOf="@+id/progressBar2"
                app:layout_constraintTop_toTopOf="@+id/date_img" />

            <TextView
                android:id="@+id/day_left_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/date_img"
                app:layout_constraintStart_toStartOf="@+id/range_title_txt"
                app:layout_constraintTop_toBottomOf="@+id/range_title_txt" />

            <ImageView
                android:id="@+id/wallet_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/icon_109"
                app:layout_constraintStart_toStartOf="@+id/date_img"
                app:layout_constraintTop_toBottomOf="@+id/day_left_txt" />

            <TextView
                android:id="@+id/wallet_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/wallet_icon"
                app:layout_constraintStart_toStartOf="@+id/day_left_txt"
                app:layout_constraintTop_toTopOf="@+id/wallet_icon" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/budget_chart"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wallet_icon" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/projected_spending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/recommend_daily_spending"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budget_chart" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/actual_daily_spending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommend_daily_spending_txt" />

            <Button
                android:id="@+id/view_transactions_list_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/transactions_list"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actual_daily_spending_txt" />

            <TextView
                android:id="@+id/recommend_daily_spending_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/projected_spending_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/actual_daily_spending_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/textView13"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/startdate_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/budget_chart"
                app:layout_constraintTop_toBottomOf="@+id/budget_chart" />

            <TextView
                android:id="@+id/enddate_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/budget_chart"
                app:layout_constraintTop_toBottomOf="@+id/budget_chart" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

